manifests/dev/airflow/Service-airflow-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: airflow-1.15.0
    component: redis
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-redis
  namespace: airflow
spec:
  ports:
    - name: redis-db
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    component: redis
    release: airflow
    tier: airflow
  type: ClusterIP
