manifests/dev/airflow/Service-airflow-statsd.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9102"
    prometheus.io/scrape: "true"
  labels:
    chart: airflow-1.15.0
    component: statsd
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-statsd
  namespace: airflow
spec:
  ports:
    - name: statsd-ingest
      port: 9125
      protocol: UDP
      targetPort: 9125
    - name: statsd-scrape
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    component: statsd
    release: airflow
    tier: airflow
  type: ClusterIP
