manifests/dev/airflow/Service-airflow-triggerer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: airflow-1.15.0
    component: triggerer
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-triggerer
  namespace: airflow
spec:
  clusterIP: None
  ports:
    - name: triggerer-logs
      port: 8794
      protocol: TCP
      targetPort: 8794
  selector:
    component: triggerer
    release: airflow
    tier: airflow
