manifests/dev/airflow/Service-airflow-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: airflow-1.15.0
    component: webserver
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-webserver
  namespace: airflow
spec:
  ports:
    - name: airflow-ui
      port: 8080
  selector:
    component: webserver
    release: airflow
    tier: airflow
  type: ClusterIP
