manifests/dev/airflow/Service-airflow-worker.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: airflow-1.15.0
    component: worker
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-worker
  namespace: airflow
spec:
  clusterIP: None
  ports:
    - name: worker-logs
      port: 8793
      protocol: TCP
      targetPort: 8793
  selector:
    component: worker
    release: airflow
    tier: airflow
