manifests/dev/airflow/Ingress-airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    chart: airflow-1.15.0
    component: airflow-ingress
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-ingress
  namespace: airflow
spec:
  rules:
    - host: airflow.dev.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: airflow-webserver
                port:
                  name: airflow-ui
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - airflow.dev.kronkltd.net
      secretName: airflow-tls
